After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668171 - Crashing in NautilusFloatingBar when closing tab
Crashing in NautilusFloatingBar when closing tab
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-18 12:21 UTC by Xan Lopez
Modified: 2012-01-18 21:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Xan Lopez 2012-01-18 12:21:50 UTC
I got this a couple of times. It seems we disconnect the timeout on dispose, so not sure what's wrong, filing the bug in the meantime so that I don't forget:

GLib-GObject-WARNING **: invalid uninstantiatable type `(null)' in cast to `NautilusFloatingBar'

Program received signal SIGSEGV, Segmentation fault.
0x000000000048e933 in nautilus_floating_bar_set_label (self=0x3cc8010, label=0x0) at ../../../lib/widgets/nautilus-floating-bar.c:306
306		if (g_strcmp0 (self->priv->label, label) != 0) {
Missing separate debuginfos, use: debuginfo-install google-talkplugin-2.5.6.0-1.x86_64 gstreamer-plugins-bad-free-0.10.22-2.fc16.1.x86_64 gstreamer-plugins-good-0.10.30-5.fc16.x86_64 libasyncns-0.8-2.fc15.x86_64 libquvi-0.4.0-5.fc16.x86_64 libvpx-0.9.7.1-1.fc16.x86_64 tcp_wrappers-libs-7.6-64.fc16.x86_64
(gdb) bt
  • #0 nautilus_floating_bar_set_label
    at ../../../lib/widgets/nautilus-floating-bar.c line 306
  • #1 _ephy_embed_set_statusbar_label
    at ../../embed/ephy-embed.c line 438
  • #2 ephy_embed_statusbar_update
    at ../../embed/ephy-embed.c line 762
  • #3 ephy_embed_statusbar_pop
    at ../../embed/ephy-embed.c line 868
  • #4 pop_statusbar_later_cb
    at ../../embed/ephy-embed.c line 453
  • #5 g_timeout_dispatch
    at gmain.c line 3857
  • #6 g_main_dispatch
    at gmain.c line 2513
  • #7 g_main_context_dispatch
    at gmain.c line 3050
  • #8 g_main_context_iterate
    at gmain.c line 3121
  • #9 g_main_context_iteration
    at gmain.c line 3182
  • #10 g_application_run
    at gapplication.c line 1599
  • #11 main
    at ../../src/ephy-main.c line 472

Comment 1 Xan Lopez 2012-01-18 21:42:19 UTC
Fixed in master, commit b2fff0dd22d8c3dbcb3d88e1d044fdb68b4cea21.