ephy-embed: do not listen to status updates after dispose

Otherwise we might crash updating a dead statusbar widget.

https://bugzilla.gnome.org/show_bug.cgi?id=668171